# CocosEngine_231116

./: README.md  cc.config.json  index.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: native-bindings.yml  native-compile-local.yml  native-compile-platforms.yml
@types/: globals.d.ts  jsb.auto.d.ts  jsb.d.ts
@types/pal/: pacer.d.ts
cocos/: root.jsb.ts  root.ts
cocos/2d/assets/: sprite-frame.ts
cocos/2d/components/: sprite.ts
cocos/3d/framework/: mesh-renderer.jsb.ts  mesh-renderer.ts
cocos/3d/skinned-mesh-renderer/: skinned-mesh-renderer.ts
cocos/adaptive-performance/: decorator.ts  enums.ts  index-empty.ts  index.ts  indexer.ts  performance-manager.ts  performance-predictor.ts  profiler.ts  scaler.ts  thermal-manager.ts
cocos/adaptive-performance/dev/: index.ts  jsb-generator.ts  node-generator.ts
cocos/adaptive-performance/inspector/: index.ts  jsb-udp.ts  native-udp.ts
cocos/adaptive-performance/logger/: index.ts  logger-udp.ts
cocos/adaptive-performance/scalers/: index.ts  physics.ts  resolution.ts
cocos/core/: director.ts  root.jsb.ts  root.ts
cocos/core/3d/builtin/: effects.ts  init.ts
cocos/core/assets/: asset.jsb.ts
cocos/core/builtin/: builtin-res-mgr.jsb.ts
cocos/core/components/: component.ts
cocos/core/components/ui-base/: ui-renderable.ts
cocos/core/data/: class-stash.ts  class.ts
cocos/core/data/decorators/: ccclass.ts  component.ts  editable.ts  override.ts  property.ts  serializable.ts  type.ts  utils.ts
cocos/core/data/utils/: attribute-defines.ts  attribute.ts  compact-value-type-array.ts  compiler.ts  preprocess-class.ts
cocos/core/math/: mat3.jsb.ts  mat3.ts  mat4.jsb.ts  mat4.ts  math-base.ts  math-native-ext.ts  quat.ts  type-define.ts  utils.ts  vec2.ts  vec3.jsb.ts  vec3.ts  vec4.ts
cocos/core/scene-graph/: argument-stack.jsb.ts  component-scheduler.jsb.ts  index.jsb.ts  index.ts  node-activator.jsb.ts  node-activator.ts  node.jsb.ts  node.ts  scene.jsb.ts
cocos/core/utils/: js-typed.ts
cocos/game/: director.ts  game.ts
cocos/native-binding/: index.ts
cocos/particle-2d/: motion-streak-2d-assembler.ts  particle-system-2d-assembler.ts
cocos/physics/framework/: index.ts  physics-scaler.ts
cocos/profiler/: profiler.ts
cocos/scene-graph/: node.jsb.ts  scene.jsb.ts
cocos/spine/: AttachUtil.ts  Skeleton.ts  index.ts  skeleton-cache.ts  skeleton-data.ts  skeleton-texture.ts  skeleton.ts  track-entry-listeners.ts  vertex-effect-delegate.ts
cocos/spine/assembler/: index.ts  simple.ts
cocos/spine/lib/: spine-core.d.ts  spine-core.js  spine-core.js.map
cocos/tiledmap/assembler/: simple.ts
cocos/ui/assembler/: utils.ts
cocos/ui/components/: ui-static-batch.ts
cocos2d/core/: node-activator.js
cocos2d/core/components/: CCLabel.js
editor/assets/effects/: builtin-spine-two-colored.effect  builtin-sprite.effect
editor/engine-features/: render-config.json  schema.json
exports/: adaptive-performance.ts  spine.ts
native/: CMakeLists.txt  README.md
native/cmake/: plugins.cmake  predefine.cmake
native/cmake/scripts/: plugins_parser.js
native/cocos/: cocos.h
native/cocos/application/: ApplicationManager.cpp  BaseGame.cpp  CocosApplication.cpp
native/cocos/audio/: AudioEngine.cpp
native/cocos/base/: Agent.h  AutoreleasePool.cpp  CoreStd.h  Data.cpp  Data.h  Map.h  Random.h  Ref.cpp  Ref.h  Scheduler.cpp  StringPool.h  StringUtil.h  ThreadPool.cpp  Timer.h  UTF8.cpp  UTF8.h  Utils.h  Value.h  Vector.h  ZipUtils.cpp  ZipUtils.h  base64.h
native/cocos/base/log/: CMakeLists.txt
native/cocos/bindings/jswrapper/: CMakeLists.txt  PrivateObject.h  SeMacros.h  State.cpp  State.h  Value.cpp  Value.h  config.h
native/cocos/bindings/jswrapper/napi/: Object.cpp
native/cocos/bindings/jswrapper/v8/: HelperMacros.cpp  HelperMacros.h  Object.cpp  ScriptEngine.cpp  ScriptEngine.h  Utils.cpp  Utils.h
native/cocos/bus/: BusTypes.h  EventBus.cpp  EventBus.h
native/cocos/core/: Root.cpp  Root.h
native/cocos/editor-support/: IOBuffer.h  IOTypedArray.h  MiddlewareManager.cpp  SharedBufferManager.cpp  TypedArrayPool.cpp  TypedArrayPool.h  middleware-adapter.cpp
native/cocos/engine/: Engine.cpp  EngineEvents.h
native/cocos/loop/: RunLoop.cpp  RunLoop.h
native/cocos/math/: CMakeLists.txt  Geometry.cpp  Geometry.h  Mat3.cpp  Mat3.h  Mat4.cpp  Mat4.h  Mat4.inl  MathBase.h  MathDef.cpp  MathDef.h  MathMacros.h  MathUtil.cpp  MathUtil.h  Quaternion.cpp  Quaternion.h  Quaternion.inl  Vec2.cpp  Vec2.h  Vec2.inl  Vec3.cpp  Vec3.h  Vec3.inl  Vec4.cpp  Vec4.h  Vec4.inl  Vertex.cpp  Vertex.h
native/cocos/modules/jswrapper/: CMakeLists.txt
native/cocos/modules/jswrapper/include/jswrapper/: Value.h
native/cocos/modules/jswrapper/include/jswrapper/v8/: HelperMacros.h  ScriptEngine.h
native/cocos/modules/jswrapper/src/v8/: ScriptEngine.cpp
native/cocos/modules/log/: CMakeLists.txt
native/cocos/modules/log/include/base/: Log.h
native/cocos/modules/macro/: CMakeLists.txt
native/cocos/network/: Downloader.h  DownloaderImpl.h  HttpClient-java.cpp  HttpClient.cpp  HttpRequest.h  SocketIO.cpp  SocketIO.h  Uri.cpp  Uri.h  WebSocket-libwebsockets.cpp  WebSocket.h  WebSocketServer.cpp  WebSocketServer.h
native/cocos/platform/: Application.cpp  BasePlatform.h  FileUtils.cpp  FileUtils.h  SAXParser.h  WatchDog.cpp  WatchDog.h  WatchDogUV.cpp
native/cocos/platform/fileutils/: CMakeLists.txt
native/cocos/plugins/: Plugins.cpp  Plugins.h  plugins.cpp  plugins.h
native/cocos/scene/: Camera.cpp  Octree.h  RenderScene.cpp  RenderWindow.cpp
native/docs/: CODING_STYLE.md
native/extensions/assets-manager/: AssetsManagerEx.cpp  Manifest.cpp
native/templates/cmake/: windows.cmake
native/tests/sebind-tests/: cfg.cmake
native/tools/bindings-generator/: batch_input.h  generator.py
native/tools/swig-config/: scene.i
native/tools/tojs/: cocos.ini
native/utils/: generate_compile_commands_android.sh
pal/pacer/: pacer-native.ts
rollup/src/: build-engine.ts
scripts/build-engine/: package-lock.json
templates/cmake/: android.cmake  common.cmake  linux.cmake
(+265 files in other folders)
